--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   db:
     image: postgres
     restart: always
-    env_file: backend/.env
+    env_file: .env
     ports:
       - 5432:5432
     networks:
